prod/directory/paas/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: paas
  annotations:
    linkerd.io/inject: enabled
  name: paas
