prod/directory/paas/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image
  namespace: paas
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: image
  template: 
    metadata:
      labels:
        app: image
    spec:
      containers:
      - name: profile-image
        image: digitalcollab/profile-image:latest
        ports:
        - containerPort: 4466
        volumeMounts:
        - mountPath: /usr/share/nginx/html/upload
          name: image-data-volume
      volumes:
      - name: image-data-volume
        persistentVolumeClaim:
          claimName: image-data-volume-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-apollo
  namespace: paas
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: profile-apollo
  template: 
    metadata:
      labels:
        app: profile-apollo
    spec:
      containers:
      - name: apollo
        image: digitalcollab/profile-apollo:latest
        ports:
        - containerPort: 4466
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prismagraphql
  namespace: paas
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: prismagraphql
  template: 
    metadata:
      labels:
        app: prismagraphql
    spec:
      containers:
      - name: prisma
        image: prismagraphql/prisma:1.26
        ports:
        - containerPort: 4466
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: paas
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: postgres
  template: 
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.6
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: postgresql-db
          name: postgres-volume
      volumes:
      - name: postgres-volume
        azureDisk:
          kind: Managed
          diskName: profileDBVolume
          diskURI: /subscriptions/{sub-id}/resourceGroups/{resourceGroup}/providers/Microsoft.Compute/disks/profileDBVolume
