prod/directory/paas/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: image
  namespace: paas
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
  selector: 
    app: image
---
apiVersion: v1
kind: Service
metadata:
  name: profile-apollo
  namespace: paas
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 4000
  selector: 
    app: profile-apollo
---
apiVersion: v1
kind: Service
metadata:
  name: prismagraphql
  namespace: paas
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 4466
  selector: 
    app: prismagraphql
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: paas
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 5432
  selector: 
    app: postgres
---
