prod/directory/paas/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: paas-ingress
  namespace: paas
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  tls:
  - hosts:
    - paas.gccollab.ca
    secretName: paas-secret
  rules:
  - host: paas.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: profile-apollo
          servicePort: 4000
